--- a/laboratorio-modulo3-leccion03-selenium.ipynb
+++ b/laboratorio-modulo3-leccion03-selenium.ipynb
@@ -142,11 +142,12 @@
     "\n",
     "    sleep(2)\n",
     "    \n",
-    "    urlactual= driver.current_url\n",
-    "    print(urlactual)\n",
-    "    html_table_page = driver.page_source\n",
+    "    url_iteracion = driver.current_url\n",
+    "    print(f\"Iterando sobre {url_iteracion}\")\n",
     "    \n",
-    "    sopa = BeautifulSoup(html_table_page)\n",
+    "    tabla_html = driver.page_source\n",
+    "    \n",
+    "    sopa = BeautifulSoup(tabla_html)\n",
     "    tabla_bs = sopa.findAll(\"table\",{'aria-labelledby':'Days data'})\n",
     "    break"
    ]
@@ -435,8 +436,8 @@
    "source": [
     "lista_df = []\n",
     "\n",
-    "for tablas in tabla_bs:\n",
-    "    filas = tablas.findChildren('tr')\n",
+    "for tabla in tabla_bs:\n",
+    "    filas = tabla.findChildren('tr')\n",
     "    df = pd.DataFrame([fila.text for fila in filas])\n",
     "    lista_df.append(df)\n",
     "\n",
@@ -921,119 +922,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "' Oct '"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mes = df_final.iloc[0,0]\n",
-    "mes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#html_table_page = driver.page_source\n",
-    "#bs_table = BeautifulSoup(html_table_page)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#tablas_wunder = bs_table.findAll(\"table\")\n",
-    "#len(tablas_wunder)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "bs4.element.ResultSet"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#type(tablas_wunder)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#tabla1 = tablas_wunder[1].getText()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'TimeTemperature (°F)Dew Point (°F)Humidity (%)Wind Speed (mph)Pressure (in)Precipitation (in) Oct  1  2  3  4  5  6  7  8  9  10  11  12  13  14  15  16  Max  Avg  Min  84  66.8  50  79  71.2  63  77  67.6  61  77  63.9  50  81  65.5  50  75  69.7  64  75  63.6  57  64  60.0  55  70  63.0  59  68  60.4  52  68  57.0  45  63  60.4  57  75  63.6  55  73  64.5  57  70  64.4  61  72  63.0  61  Max  Avg  Min  55  45.2  41  63  57.0  52  59  49.6  37  50  46.1  43  59  51.0  45  59  56.7  55  57  53.6  48  57  54.6  52  63  57.3  50  50  43.9  41  54  46.1  41  61  58.1  55  59  55.9  54  61  58.5  55  61  59.1  55  63  59.3  57  Max  Avg  Min  72  48.8  23  78  62.0  47  88  55.5  24  82  53.9  36  87  61.8  39  73  64.1  50  94  71.8  38  88  82.0  68  94  81.4  63  76  55.4  37  93  68.3  43  100  93.3  82  100  78.7  53  100  81.9  61  100  83.0  64  94  88.5  69  Max  Avg  Min  10  3.6  0  18  8.8  0  16  5.6  0  8  2.3  0  17  5.9  0  17  12.7  1  24  6.9  0  17  11.4  3  23  12.2  3  20  7.3  0  10  2.9  0  9  1.9  0  6  1.8  0  6  1.0  0  20  7.9  0  20  12.4  6  Max  Avg  Min  28.0  27.9  27.9  27.9  27.8  27.7  27.9  27.8  27.7  27.9  27.9  27.8  27.9  27.9  27.8  27.8  27.8  27.8  27.8  27.7  27.6  27.8  27.8  27.7  27.8  27.6  27.5  27.9  27.8  27.7  27.9  27.9  27.8  27.9  27.8  27.8  28.0  28.0  27.9  28.0  27.9  27.8  27.8  27.7  27.7  27.7  27.7  27.6  Total  0.00  0.00  0.00  0.00  0.00  0.00  0.00  0.00  0.00  0.00  0.00  0.00  0.00  0.00  0.00  0.00 '"
-      ]
-     },
-     "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#tabla1"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#reshape y transpose"
+    "lista_municipios = [\"acebeda-la\", \"ajalvir\", \"alameda-del-valle\", \"alamo-el\", \"alcala-de-henares\", \"alcobendas\", \"alcorcon\", \"aldea-del-fresno\", \"algete\", \"alpedrete\", \"ambite\", \"anchuelo\", \"aranjuez\", \"arganda-del-rey\", \"arroyomolinos\", \"atazar-el\", \"batres\", \"becerril-de-la-sierra\", \"belmonte-de-tajo\", \"berrueco-el\", \"berzosa-del-lozoya\", \"boadilla-del-monte\", \"boalo-el\", \"braojos\", \"brea-de-tajo\", \"brunete\", \"buitrago-del-lozoya\", \"bustarviejo\", \"cabanillas-de-la-sierra\", \"cabrera-la\", \"cadalso-de-los-vidrios\", \"camarma-de-esteruelas\", \"campo-real\", \"canencia\", \"carabana\", \"casarrubuelos\", \"cenicientos\", \"cercedilla\", \"cervera-de-buitrago\", \"chapineria\", \"chinchon\", \"ciempozuelos\", \"cobena\", \"collado-mediano\", \"collado-villalba\", \"colmenar-del-arroyo\", \"colmenar-de-oreja\", \"colmenarejo\", \"colmenar-viejo\", \"corpa\", \"coslada\", \"cubas-de-la-sagra\", \"daganzo-de-arriba\", \"escorial-el\", \"estremera\", \"fresnedillas-de-la-oliva\", \"fresno-de-torote\", \"fuenlabrada\", \"fuente-el-saz-de-jarama\", \"fuentiduena-de-tajo\", \"galapagar\", \"garganta-de-los-montes\", \"gargantilla-del-lozoya-y-pinilla-de-buitrago\", \"gascones\", \"getafe\", \"grinon\", \"guadalix-de-la-sierra\", \"guadarrama\", \"hiruela-la\", \"horcajo-de-la-sierra-aoslos\", \"horcajuelo-de-la-sierra\", \"hoyo-de-manzanares\", \"humanes-de-madrid\", \"leganes\", \"loeches\", \"lozoya\", \"lozoyuela-navas-sieteiglesias\", \"madarcos\", \"madrid\", \"majadahonda\", \"manzanares-el-real\", \"meco\", \"mejorada-del-campo\", \"miraflores-de-la-sierra\", \"molar-el\", \"molinos-los\", \"montejo-de-la-sierra\", \"moraleja-de-enmedio\", \"moralzarzal\", \"morata-de-tajuna\", \"mostoles\", \"navacerrada\", \"navalafuente\", \"navalagamella\", \"navalcarnero\", \"navarredonda-y-san-mames\", \"navas-del-rey\", \"nuevo-baztan\", \"olmeda-de-las-fuentes\", \"orusco-de-tajuna\", \"paracuellos-de-jarama\", \"parla\", \"patones\", \"pedrezuela\", \"pelayos-de-la-presa\", \"perales-de-tajuna\", \"pezuela-de-las-torres\", \"pinilla-del-valle\", \"pinto\", \"pinuecar-gandullas\", \"pozuelo-de-alarcon\", \"pozuelo-del-rey\", \"pradena-del-rincon\", \"puebla-de-la-sierra\", \"puentes-viejas-manjiron\", \"quijorna\", \"rascafria\", \"reduena\", \"ribatejada\", \"rivas-vaciamadrid\", \"robledillo-de-la-jara\", \"robledo-de-chavela\", \"robregordo\", \"rozas-de-madrid-las\", \"rozas-de-puerto-real\", \"san-agustin-del-guadalix\", \"san-fernando-de-henares\", \"san-lorenzo-de-el-escorial\", \"san-martin-de-la-vega\", \"san-martin-de-valdeiglesias\", \"san-sebastian-de-los-reyes\", \"santa-maria-de-la-alameda\", \"santorcaz\", \"santos-de-la-humosa-los\", \"serna-del-monte-la\", \"serranillos-del-valle\", \"sevilla-la-nueva\", \"somosierra\", \"soto-del-real\", \"talamanca-de-jarama\", \"tielmes\", \"titulcia\", \"torrejon-de-ardoz\", \"torrejon-de-la-calzada\", \"torrejon-de-velasco\", \"torrelaguna\", \"torrelodones\", \"torremocha-de-jarama\", \"torres-de-la-alameda\", \"tres-cantos\", \"valdaracete\", \"valdeavero\", \"valdelaguna\", \"valdemanco\", \"valdemaqueda\", \"valdemorillo\", \"valdemoro\", \"valdeolmos-alalpardo\", \"valdepielagos\", \"valdetorres-de-jarama\", \"valdilecha\", \"valverde-de-alcala\", \"velilla-de-san-antonio\", \"vellon-el\", \"venturada\", \"villaconejos\", \"villa-del-prado\", \"villalbilla\", \"villamanrique-de-tajo\", \"villamanta\", \"villamantilla\", \"villanueva-de-la-canada\", \"villanueva-del-pardillo\", \"villanueva-de-perales\", \"villar-del-olmo\", \"villarejo-de-salvanes\", \"villaviciosa-de-odon\", \"villavieja-del-lozoya\", \"zarzalejo\"]\n",
+    "\n",
+    "def palabra_aleatoria(lista):\n",
+    "    return random.sample(lista, k=5)\n",
+    "\n",
+    "lista_final = palabra_aleatoria(lista_municipios)\n",
+    "\n",
+    "\n",
+    "driver = webdriver.Chrome()\n",
+    "\n",
+    "url_wunder = \"https://www.wunderground.com/history\"\n",
+    "driver.get(url_wunder)\n",
+    "driver.maximize_window()\n",
+    "sleep(2)\n",
+    "\n",
+    "\n",
+    "try:\n",
+    "    iframe = WebDriverWait(driver, 10).until(EC.presence_of_element_located(('xpath','//*[@id=\"sp_message_iframe_1165301\"]')))\n",
+    "    driver.switch_to.frame(iframe)\n",
+    "    driver.find_element(\"css selector\",\"#notice > div.message-component.message-row.cta-buttons-container > div.message-component.message-column.cta-button-column.reject-column > button\").click()\n",
+    "    driver.switch_to.default_content()\n",
+    "\n",
+    "except:\n",
+    "    print('No encuentro el botón cookies')\n",
+    "\n",
+    "for municipio in lista_final:\n",
+    "    try:\n",
+    "        driver.find_element(\"css selector\", \"#historySearch\").send_keys(municipio, Keys.TAB)\n",
+    "        sleep(3)\n",
+    "        driver.find_element(\"css selector\", \"#dateSubmit\").click()\n",
+    "        sleep(3)\n",
+    "        driver.find_element(\"css selector\", \"#dateSubmit\").click()\n",
+    "        sleep(3)\n",
+    "        driver.find_element(\"css selector\", \"#inner-content > div.region-content-main > div.row > div:nth-child(1) > div:nth-child(1) > div > lib-link-selector > div > div > div > a:nth-child(3)\").click()\n",
+    "        sleep(3)\n",
+    "        url_iteracion = driver.current_url\n",
+    "        print(f\"Iterando sobre {url_iteracion}\")\n",
+    "        \n",
+    "        tabla_html = driver.page_source\n",
+    "        sopa = BeautifulSoup(tabla_html, \"html.parser\")\n",
+    "        tabla_bs = sopa.findAll(\"table\", {'aria-labelledby': 'Days data'})\n",
+    "        lista_df = []\n",
+    "        \n",
+    "        for tabla in tabla_bs:\n",
+    "            filas = tabla.findChildren('tr')\n",
+    "            df = pd.DataFrame([fila.text.split() for fila in filas])\n",
+    "            lista_df.append(df)\n",
+    "        \n",
+    "        df_sucio = pd.concat(lista_df, axis=1)\n",
+    "        df_sucio.columns = [\"Day\", \"Temperature\", \"Dew Point\", \"Humidity\", \"Wind Speed\", \"Pressure\", \"Precipitation\"]\n",
+    "        mes = df_sucio.iloc[0, 0]\n",
+    "        df_final = df_sucio.iloc[1:].copy()\n",
+    "        \n",
+    "        def separar_columnas(df, columna, nuevas_columnas):\n",
+    "            df[nuevas_columnas] = df[columna].str.split(expand=True)\n",
+    "            df.drop(columns=[columna], inplace=True)\n",
+    "        \n",
+    "        df_final.insert(loc=0, column=\"Municipio\", value=municipio)\n",
+    "        df_final.insert(loc=1, column=\"Mes\", value=mes)\n",
+    "        separar_columnas(df_final, 'Temperature', ['T Max', 'T Avg', 'T Min'])\n",
+    "        separar_columnas(df_final, 'Dew Point', ['DP Max', 'DP Avg', 'DP Min'])\n",
+    "        separar_columnas(df_final, 'Humidity', ['H Max', 'H Avg', 'H Min'])\n",
+    "        separar_columnas(df_final, 'Wind Speed', ['W Max', 'W Avg', 'W Min'])\n",
+    "        separar_columnas(df_final, 'Pressure', ['P Max', 'P Avg', 'P Min'])\n",
+    "\n",
+    "        lista_df.append(df_final)\n",
+    "    \n",
+    "    except:\n",
+    "        print(f\"Error en {municipio}\")\n",
+    "\n",
+    "df_completo = pd.concat(lista_df, ignore_index=True)"
    ]
   }
  ],
