--- a/laboratorio-modulo3-leccion03-selenium.ipynb
+++ b/laboratorio-modulo3-leccion03-selenium.ipynb
@@ -51,17 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def palabra_aleatoria(lista):\n",
-    "    return random.choices(lista, k=2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +66,7 @@
     }
    ],
    "source": [
-    "lista_final = palabra_aleatoria(lista_municipios)\n",
+    "lista_final = (lambda lista : random.choices(lista, k = 2))(lista_municipios)\n",
     "lista_final"
    ]
   },
